# batch-poe-implementation

./: BucketBatching.cpp  BucketBatching.h  CMakeLists.txt  Experiments.cpp  Experiments.h  GenInstances.cpp  GenInstances.h  HybridBatching.cpp  HybridBatching.h  Makefile  NaiveApproach.cpp  NaiveApproach.h  PRF.cpp  PRF.h  PRF_AES.cpp  PRF_AES.h  PRF_crypto.cpp  PRF_crypto.h  Programmer_documentation.md  README.md  SubsetBatching.cpp  SubsetBatching.h  batching.cpp  batching.h  configure  helper.cpp  helper.h  main.cpp  mpz_helper.cpp  mpz_helper.h  proof.h  show_results.py  tests.cpp  tests.h  wesolowski.cpp  wesolowski.h
experiments/: exp.csv  experiments.py  results_processing.py  run_experiments.py  run_helpers.py  separate_vs_joint_launch.py  show_separate_vs_join.py
experiments/results/: result_exp_1e2.csv  result_exp_1e3.csv  result_exp_1e4.csv  result_exp_1e5.csv  result_exp_1e6.csv
installer/: main-unix.py  main-windows.py  main.py
theoretical-analysis/: verification_costs.py
